@@ -4,6 +4,8 @@ Revision history for DBIx::Class
         - Fix update/delete operations on resultsets *joining* the updated
           table failing on MySQL. Resolves oversights in the fixes for
           RT#81378 and RT#81897
+        - Stop Sybase ASE storage from generating invalid SQL in subselects
+          when a limit without offset is encountered
 
 0.08210 2013-04-04 15:30 (UTC)
     * New Features / Changes
